Strip out much of what came with template

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: WebConfs - A blog about web conferences
-email: coolwebconfs@gmail.com
-description: A blog about my favorite web conferences.
-url: "http://webconfs.me" # the base hostname & protocol for your site
-twitter_username: guilh
+title: Tomas Mulder's Portfolio
+email: tcmulder@gmail.com
+description: A portfolio for Tomas Mulder.
+url: "http://www.tcmulder.com" # the base hostname & protocol for your site
+twitter_username: tcmulder
 
 # Build settings
 markdown: kramdown
@@ -14,20 +14,6 @@ defaults:
   -
     scope:
       path: "" # an empty string here means all files in the project
-      type: "posts" # previously `post` in Jekyll 2.2.
-    values:
-      author: Guil Hernandez
-      layout: "post"
-      category: conferences
-      comments: true
-  -
-    scope:
-      path: "" # an empty string here means all files in the project
       type: "pages" # previously `post` in Jekyll 2.2.
     values:
       layout: "page"
-
-
-
-
-
